--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,9 +236,48 @@ header .head-side {
     cursor: pointer;
     margin-right:5px;
 }
+
+.feed-new-photo {
+    cursor: pointer;
+    margin-right:5px;
+}
+
+.feed-new-photo img {
+    width:25px;
+    height:25px;
+}
+
+.feed-input-photo{
+    position: absolute;
+    left: -500px;
+    height: -500px;
+}
+
 .feed-new-send img {
     width:25px;
     height:25px;
+}
+
+.feed-item-more-window{
+    position: absolute;
+    background-color: #FFF;
+    width: 150px;
+    padding: 5px;
+    border: 1px solid #EEE;
+    border-radius: 3px;
+    margin-left: -130px;
+    display: none;
+}
+
+.feed-item-more-window a{
+    display: block;
+    padding: 7px;
+    text-decoration: none;
+    color: #000;
+    
+}
+.feed-item-more-window a:hover{
+    background-color: #CCC;
 }
 
 .banners .box-body {
@@ -353,6 +392,7 @@ header .head-side {
 
 .user-photo-item {
     margin-right:10px;
+    max-width: 25%;
 }
 .user-photo-item:last-child {
     margin-right:0;
@@ -428,6 +468,9 @@ header .head-side {
 .mini {
     max-height: 100px;
 }
+
+
+
 @media (max-width: 992px) {
     header .head-side-right {
         display:none !important;
