--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,6 +280,24 @@ header .head-side {
     background-color: #CCC;
 }
 
+
+.feed-pagination a {
+    display: inline-block;
+    padding: 7px 10px;
+    border: 1px solid #CCC;
+    margin: 5px;
+    text-decoration: none;
+    color: #000;
+    border-radius: 3px;
+}
+
+.feed-pagination a:hover{
+    background-color: #CCC;
+}
+
+.feed-pagination a.active{
+    background-color: #fff;
+}
 .banners .box-body {
     margin:0 10px 10px 10px;
 }
